--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -12,7 +12,8 @@
 <a class="button navitem" href="/login?redirect_url=/{{conf}}/papers">Log In</a>
 {% endif %}
 {% endblock %}
-{% block content %} 
+{% block content %}
+<script type="text/javascript" src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
 <style>
   .link {
     stroke: #ccc;
