--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -13,7 +13,6 @@
 {% endif %}
 {% endblock %}
 {% block content %}
-<script type="text/javascript" src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
 <style>
   .link {
     stroke: #ccc;
@@ -23,17 +22,18 @@
     pointer-events: none;
     font: 10px sans-serif;
   }
-
 </style>
 
+<script type="text/javascript" src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
+<div id="visualization_container"></div>
 <script>
 
-var width = 1600,
-    height = 1200,
+var width = 1024,
+    height = 900,
     fill = d3.scale.category20(),
     color = d3.scale.category20();
 
-var svg = d3.select("body").append("svg")
+var svg = d3.select("#visualization_container").append("svg")
     .attr("width", width)
     .attr("height", height);
 
