--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -67,7 +67,13 @@ d3.json("/{{conf}}/network_graph", function(json) {
   node.append("title")
       .attr("dx", 12)
       .attr("dy", ".35em")
-      .text(function(d) { return d.id[1] + ": " + d.id[0]});
+      .text(function(d) { 
+        text = d.id[1] + ": " + d.id[0]
+        if(d.id[1] == "paper") {
+          text += entities[d.id[0]]
+        }
+        return text
+      });
 
   force.on("tick", function() {
     link.attr("x1", function(d) { return d.source.x; })
