--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -69,8 +69,8 @@ d3.json("/{{conf}}/network_graph", function(json) {
       .attr("dy", ".35em")
       .text(function(d) { 
         text = d.id[1] + ": " + d.id[0]
-        if(d.id[1] == "paper") {
-          text += entities[(d.id[0]).toString()].toString()
+        if(d.id[1] == "paper" and d.id[0] != undefined) {
+          text += entities[d.id[0].toString()].toString()
         }
         return text
       });
