--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -75,7 +75,7 @@ d3.json("/{{conf}}/network_graph", function(json) {
   node.append("title")
       .attr("dx", 12)
       .attr("dy", ".35em")
-      .text(get_text(d));
+      .text(function(d){return get_text(d)});
 
   force.on("tick", function() {
     link.attr("x1", function(d) { return d.source.x; })
