--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -32,7 +32,7 @@ function get_text(d) {
   var text = d.id[1] + ": " + d.id[0]
   if(d.id[1] == "paper" && d.id[0] != undefined) {
     if (entities[d.id[0]] != undefined) {
-      text += entities[d.id[0]].title
+      text += ", title: " + entities[d.id[0]].title + ""
     }
   }
   return text
