--- a/server/templates/settings.html
+++ b/server/templates/settings.html
@@ -25,7 +25,7 @@
 	<input type="radio" name="meetups_enabled" value="enabled" {% if meetups_enabled %} checked="checked" {% endif %}> Enabled </input>
 	<input type="radio" name="meetups_enabled" value="disabled" {% if not meetups_enabled %} checked="checked" {% endif %} > Disabled </input> <br /><br />
 
-	<label for="friendly">Are you friendly? </label>
+	<label for="friendly">Do you welcome people proposing to meet you through confer?</label>
 	<input type="radio" name="friendly" value="yes" {% if friendly %} checked="checked" {% endif %}> Yes </input>
 	<input type="radio" name="friendly" value="no" {% if not friendly %} checked="checked" {% endif %} > No </input> <br /><br />
 	<input type="submit" class="button" value="Save Settings" />
