add friendly option

--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -22,7 +22,7 @@ The Meetups feature allows you to discover people with similar interests as your
 
 {% if meetups_enabled %}
 <!-- Favorite List -->
-<h3 class="collapsible-title collapsible" id="people_you_favorited_toggle" data="people_you_favorited_container"><span class="arrow arrow-down"></span> People you like to meet</h3>
+<h3 class="collapsible-title collapsible" id="people_you_favorited_toggle" data="people_you_favorited_container"><span class="arrow arrow-down"></span> People you want to meet</h3>
 <div id="people_you_favorited_container">
   <table id="people_you_favorited" class="paper-container">
   </table>
@@ -31,7 +31,7 @@ The Meetups feature allows you to discover people with similar interests as your
 <br />
 <br />
 <!-- People Favorited -->
-<h3 class="collapsible-title collapsible" id="people_favorited_you_toggle" data="people_favorited_you_container"><span class="arrow arrow-down"></span> People who like to meet you</h3>
+<h3 class="collapsible-title collapsible" id="people_favorited_you_toggle" data="people_favorited_you_container"><span class="arrow arrow-down"></span> People who want to meet you</h3>
 <div id="people_favorited_you_container">
   <table id="people_favorited_you" class="paper-container">   
   </table>
