--- a/server/templates/settings.html
+++ b/server/templates/settings.html
@@ -10,7 +10,7 @@
 {% block content %}
 <script type="text/javascript">
 </script>
-<form method="POST" action="/settings">
+<form method="POST" action="/{{conf}}/settings">
 	{% csrf_token %}
 	<input type="hidden" name="redirect_url" value="{{redirect_url}}" />
 	<h3>Confer Account Settings</h3>
@@ -21,6 +21,10 @@
         <br />
     </div>
 	<input type="hidden" name="user_email" id="user_email" value="{{user_email}}" />
+
+	<label for="user_voter_id">Voter ID: </label>
+	<input type="text" name="user_voter_id" id="user_voter_id" value="{{user_voter_id}}" /> <br /> <br />
+	
 	<label for="meetups_enabled">Meetups: </label>
 	<input type="radio" name="meetups_enabled" value="enabled" {% if meetups_enabled %} checked="checked" {% endif %}> Enabled </input>
 	<input type="radio" name="meetups_enabled" value="disabled" {% if not meetups_enabled %} checked="checked" {% endif %} > Disabled </input> <br /><br />
