--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -30,6 +30,7 @@ Confer Template Layout
 <script type="text/javascript" src="/static/javascript/third-party/jquery.min.js"></script>	
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
 {% block static %}
+<script type="text/javascript" src="/static/conf/{{conf}}/data/config_params.json"></script>
 <script type="text/javascript" src="/static/conf/{{conf}}/data/papers.json"></script>
 <script type="text/javascript" src="/static/conf/{{conf}}/data/sessions.json"></script>
 <script type="text/javascript" src="/static/conf/{{conf}}/data/schedule.json"></script>
