--- a/scripts/paper-assign/styles.css
+++ b/scripts/paper-assign/styles.css
@@ -2,6 +2,7 @@ body {
 	font-family:  "Helvetica", "Arial",  "Verdana", "sans-serif";
 	font-size: 62.5%;
 	min-width: 520px;
+	background: #FFFFFF;
 }
 
 .header {
@@ -78,9 +79,18 @@ body {
 
 .session {
 	float: left;
+	margin-top: 0px;
 	width: 33%;
 }
 
+.session-time-header {
+	background: #DDDDDD;
+	font-size:14px;
+	font-weight: bold;
+	width:100%;
+	padding: 10px;
+	float: left;
+}
 .paper-group {
 	width: 100%;
 }
